[tool.poetry]
name = "kingyo"
version = "0.1.0"
description = ""
authors = ["theoremoon <theoldmoon0602@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.1"
opencv-contrib-python = "*"
requests = "^2.22.0"
numpy = "^1.18.1"
matplotlib = "^3.1.2"
chainer = "6.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
